--- a/02/LA/LA/01.tex
+++ b/02/LA/LA/01.tex
@@ -63,7 +63,7 @@
 \end{definition}
 
 \begin{definition}
-  Евклидово пространство называется \textit{нормированным}, если в нем
+  Линейное пространство называется \textit{нормированным}, если в нем
   определена норма.
 \end{definition}
 
